--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "project1-tour-places",
   "version": "0.1.0",
+  "homepage": "https://gamzefeblk.github.io/React-ToursPlaces",
   "private": true,
+  
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -13,6 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+   "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
